<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_theme_primaryContainer_mediumContrast"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imagenAnimal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imagen_animal"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/nombre_del_animal"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edadAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/edad_del_animal"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/descripcionAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/descripci_n_breve_del_animal"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iconoFavorito"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/favoritos"
        android:cropToPadding="false"
        android:focusable="true" />

</LinearLayout>