<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoCabecera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/icono_huella_perro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/huellas_perro"
            app:tint="@color/md_theme_primaryFixed" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="44dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/busca_encuentra_y_adopta"
            android:textColor="@color/md_theme_onSecondary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toTopOf="@+id/imagenPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0"
        app:menu="@menu/menu_personalizado"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"/>

    <ImageView
        android:id="@+id/imagenPrincipal"
        android:layout_width="325dp"
        android:layout_height="146dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/perro_y_gato"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/perro_y_gato"
        tools:ignore="VisualLintBounds"
        tools:srcCompat="@drawable/perro_y_gato" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerViewListaAnimales"
        android:name="com.example.ejercicio_tema3.FragmentAnimal"
        android:layout_width="281dp"
        android:layout_height="413dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutFavoritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_animal" />

    <LinearLayout
        android:id="@+id/linearLayoutFavoritos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/md_theme_primaryFixed"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lista_de_favoritos"
            android:textSize="12sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFavoritos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:scrollbars="horizontal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
